@@ -4,6 +4,8 @@
 
 # v2.2
 --------
+ :: TV Default Value is now output if TV is empty
+ :: TV Reset button now works [#22]
  :: Added image preloader to accurately get image size on upload.
     - This is because Modx File Manager will not report accurate
       image size for images above 800x600 [#8]
